integrating last paragraph of 3

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -683,13 +683,11 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
-## 3. Tensions due to lack of access and familiarity to game programming tools and processes
-
-
+## 3. Tensions due to lack of access and familiarity to game programming tools
 
 <!-- In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]. -->
 
-Conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them.  The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. While some of the group had some experience, many did not. In early stages, this gulf tension between the need to use the tools and text coding processess often resulted in frustration and paralysis in the activity of game coding. While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches.
+Conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience of them. While AT has a broad definition of the concept of tool, including the use of language and concepts, this section focuses on software tools used to create games in this program and technical process needed within those applications.  The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. While some of the group had some experience, many did not. In early stages, this gulf tension between the need to use the tools and text coding processes often resulted in frustration and paralysis in the activity of game coding. While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches.
 
 The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
 
@@ -807,17 +805,11 @@ The ability to easily remix community projects, supports the process of becoming
 
 Practically, in novice coding communities, this is encouraged by the use of community galleries and buttons encouraging. In Scratch this is seen in buttons named see inside and remix when viewing projects. Similarly both the Thimble (used in P1) and Glitch (used in P2 and P3) prominently featured remix buttons and view source buttons in the community interface. The shared community element on the other hand was quite different for glitch due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote with existing online communities but to focus instead on internal sharing of projects between the group.
 
+The process of adding a remix button, removes the needs for participants to copy underlying code by hand and set up the parameters of a new project.  This process is especially relevant in reducing barriers to initial participation given the use here of authentic professional text-based coding language and potential alienation from unfamiliar syntax and file structures.
 
-#### Shielding complexity of environment
+This theme of shielding from complexity is contained in all design choices detailed above and in turn aligns with a constructionist design principle to 'choose black boxes carefully' [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. The decisions made in the design each tool shape the skills and concepts the end user is guided towards. While the principle here is applied to software tool use, it also applies to the use of a starter game template, as explored in the next section. 
 
-REWRITE CAREFULLY AND MAKE LINK
-
-Any digital computer game or media project involves manipulate multi-media happening on a computer screen and to accept user input to control interactive elements. This is an inherently complex process which in order to be accessible to novice coders requires simplification.
-
-For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. The motivation is to reduce initial barriers to getting started. The use of this default aligns with a constructionist design principle 'choose black boxes carefully'  [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. Block coding can be seen as another example of a black box with each block a simplified representation of underlying text code. The decisions made in the design each tool shape the skills and concepts the end user is steered towards.
-
-In my design, I have made similar decisions to shield participants from complexity of tool use as detailed above. However, my choice to use authentic professional text-based coding language increases complexity and alienation from unfamiliar coding syntax and file structures. The next section outlines the use of a starter game template to address this issue.
-
+<!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  -->
 
 ### Design choices of the starter game template
 
