edits in purple

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -659,9 +659,9 @@ The shared in feedback (see appendix 4.x) the moment that decided their withdraw
 
 To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and the technical environment they found themselves in available to them.
 
-This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. As part of this exploration, I address the tensions that were engendered by the larger group size and the seriousness of end stages of coding.
+This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. A contributing factor to this families alienation were tensions engendered by the large group size and the seriousness of end stages of coding.
 
-While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
+I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
 
 
 <!-- NOTE - CREATE A LINK IN CHAPTER 6 - around line 300  -->
@@ -699,7 +699,9 @@ The motivation was to align to authentic web technology due to my previous exper
 
 <!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
 
-By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design  process surrounding two main elements: first, the code playground toolset; and second the starting game template.
+By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: first, the code playground toolset; and second the starting game template.
+
+These sections contain a highly granular level of detail which is both helps situate the findings of the next chapter and is important, along with resources highlighted in this chapter footnotes, to allow the design by other practitioners and researchers in this area. I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^7].   
 
 
 <!-- NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER. -->
@@ -807,18 +809,17 @@ Practically, in novice coding communities, this is encouraged by the use of comm
 
 The process of adding a remix button, removes the needs for participants to copy underlying code by hand and set up the parameters of a new project.  This process is especially relevant in reducing barriers to initial participation given the use here of authentic professional text-based coding language and potential alienation from unfamiliar syntax and file structures.
 
-This theme of shielding from complexity is contained in all design choices detailed above and in turn aligns with a constructionist design principle to 'choose black boxes carefully' [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. The decisions made in the design each tool shape the skills and concepts the end user is guided towards. While the principle here is applied to software tool use, it also applies to the use of a starter game template, as explored in the next section. 
+This theme of shielding from complexity is contained in all design choices detailed above and in turn aligns with a constructionist design principle to 'choose black boxes carefully' [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. The decisions made in the design each tool shape the skills and concepts the end user is guided towards. While the principle here is applied to software tool use, it also applies to the use of a starter game template, as explored in the next section.
 
 <!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  -->
 
 ### Design choices of the starter game template
 
-A web code project using the chosen game framework phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
 
-My choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficent and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
+This also aligns with UMC
 
-
-The following section explores these designs decisions by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
+The following section explores designs decisions relevant to the evolution of this starting template by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -858,20 +859,23 @@ A later discussion section in this chapter illustrates a more complex interactio
 -->
 
 
-#### Key Design affordances included in the game template
 
-The initial use of a working structural template was an intuitive response based on my own experience of teaching technology which aligns with UMC methods.
-
-
-To help guide the experimentation of users, I  highlight simple changes to the code that were easily recognisable game experience features.
-
-The following sections detail affordences that I have identied
-
-IN addition I looked for affordences where small changes could provoke a high impact on the game experiences.
-
-Particpants first interacted with the game after being challenged to complete it despite it being initially set in a state which prevented progress. The game was broken in an obvious way which invited participants, in this case the player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This foundation aligns with concept of half-baked games where incompleteness or bugs in behavour are a provocation to participants to correct or to further modify them [@kynigos_children_2018].
+#### Variable editing for player movement
 
 
+To help guide the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. To illustrate this, participants first interacted with the game in an obviously broken state.
+
+
+![](./Pictures/simple_game_template_3a.png){width=95%}
+
+The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This state invited participants to make changes to fix it. This foundation aligns with concept of half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them [@kynigos_children_2018].
+
+
+I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
+
+The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code.
+
+After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
 <!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
 
@@ -882,11 +886,35 @@ background colour of the game
 game layout of the platforms - hazards and food to collect. -->
 
 
-**Creating a simplified and clear project structure**
+#### Level design and prototyping
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+
+<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
+
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+
+#### Background colour and a pixel art
+
+One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations.
+
+_Seeding narrative and art creativity_
+
+As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+
+![](./Pictures/whale_1.png){width=50%}
+
+<!-- MOVE?
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
+
+#### Creating a simplified and clear project structure
+
+A web code project using the chosen game framework phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+
 
 The HTML and CSS of the base project was kept to a minimum and by default participants would see only the JavaScript file names game.js.
 
-![](./Pictures/simple_game_template_1.png){width=95%}
 
 4.x - Code environment for starting template for for P2 and P3
 
@@ -909,37 +937,6 @@ INSERT QUOTE FROM SU AND TOBY
 
 Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
 
-**Variable editing for player movement**
-
-I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
-
-EXAMPLE VIA ILLUSTRATION - side by side.
-
-The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code.
-
-After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
-
-**Level design and prototyping**
-
-The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
-
-<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
-
-<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
-
-
-**Background colour and a pixel art**
-
-One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations.
-
-_Seeding narrative and art creativity_
-
-As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
-
-![](./Pictures/whale_1.png){width=50%}
-
-<!-- MOVE?
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
 
 
 #### Observations on design behaviours encouraged through use of game template
@@ -1359,6 +1356,7 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^4]: map of GDP
 [^5]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
 [^6]: https://mickfuzz.github.io/makecode-platformer-101/addHazard
+[^7]: https://dailypapert.com/mit-logo-memos/
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
