add umc to part 3

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -817,9 +817,7 @@ This theme of shielding from complexity is contained in all design choices detai
 
 The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
 
-This also aligns with UMC
-
-The following section explores designs decisions relevant to the evolution of this starting template by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
+The following section explores designs decisions relevant to the evolution of this starting template by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. It also describes the alignment of these decisions with the UMC framework.
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -873,7 +871,7 @@ The player's maximum jump trajectory was not sufficient to progress via a jump t
 
 I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
 
-The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code.
+The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code. This part of the process aligns with the use and modify part of the UMC framework. In some ways these two stages are blurred. As the transition from Use to Modify is forced at an early stage by the half-baked design. Thus the use and modify early stages are carefully scaffolded. 
 
 After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
