--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -48,8 +48,8 @@ title: 4. Exploration of the Formative Learning Design Process
 -   [2. Conflicts due to identity clashes and dysfunctional group
     work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
 -   [3. Tensions due to lack of access and familiarity to game
-    programming tools and
-    processes](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools-and-processes)
+    programming
+    tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
     -   [Design adaptations to facilitate novice use of a code
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
@@ -58,12 +58,16 @@ title: 4. Exploration of the Formative Learning Design Process
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
         -   [Shared community and remix
             ability](#shared-community-and-remix-ability)
-        -   [Shielding complexity of
-            environment](#shielding-complexity-of-environment)
     -   [Design choices of the starter game
         template](#design-choices-of-the-starter-game-template)
-        -   [Key Design affordances included in the game
-            template](#key-design-affordances-included-in-the-game-template)
+        -   [Variable editing for player
+            movement](#variable-editing-for-player-movement)
+        -   [Level design and
+            prototyping](#level-design-and-prototyping)
+        -   [Background colour and a pixel
+            art](#background-colour-and-a-pixel-art)
+        -   [Creating a simplified and clear project
+            structure](#creating-a-simplified-and-clear-project-structure)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
@@ -85,7 +89,6 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Summary of barriers and tensions explored in this
         chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
     -   [Link to next chapter](#link-to-next-chapter)
-
 
 ## Research Questions - June 2023
 
@@ -871,7 +874,7 @@ The player's maximum jump trajectory was not sufficient to progress via a jump t
 
 I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
 
-The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code. This part of the process aligns with the use and modify part of the UMC framework. In some ways these two stages are blurred. As the transition from Use to Modify is forced at an early stage by the half-baked design. Thus the use and modify early stages are carefully scaffolded. 
+The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code. This part of the process aligns with the use and modify part of the UMC framework. In some ways these two stages are blurred. As the transition from Use to Modify is forced at an early stage by the half-baked design. Thus the use and modify early stages are carefully scaffolded.
 
 After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
