--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -38,8 +38,8 @@
 -   [2. Conflicts due to identity clashes and dysfunctional group
     work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
 -   [3. Tensions due to lack of access and familiarity to game
-    programming tools and
-    processes](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools-and-processes)
+    programming
+    tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
     -   [Design adaptations to facilitate novice use of a code
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
@@ -48,12 +48,16 @@
             creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
         -   [Shared community and remix
             ability](#shared-community-and-remix-ability)
-        -   [Shielding complexity of
-            environment](#shielding-complexity-of-environment)
     -   [Design choices of the starter game
         template](#design-choices-of-the-starter-game-template)
-        -   [Key Design affordances included in the game
-            template](#key-design-affordances-included-in-the-game-template)
+        -   [Variable editing for player
+            movement](#variable-editing-for-player-movement)
+        -   [Level design and
+            prototyping](#level-design-and-prototyping)
+        -   [Background colour and a pixel
+            art](#background-colour-and-a-pixel-art)
+        -   [Creating a simplified and clear project
+            structure](#creating-a-simplified-and-clear-project-structure)
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
